--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "dot": "^1.1.3",
     "dotenv": "^16.4.5",
     "env": "^0.0.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.3"
   }
 }
